Fixed alignment of timestamp when editing ideas

--- a/client/sass/ideas.scss
+++ b/client/sass/ideas.scss
@@ -23,6 +23,8 @@
 }
 .ideas--entry--timestamp {
   color: $boxTextColorSecondary;
+  align-self: center;
+  margin-left: 10px;
 }
 
 .ideas--entry--author {
